index.html headerを作成

--- a/src/index.html
+++ b/src/index.html
@@ -51,11 +51,28 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/main.js" defer></script>
   </head>
-  <body>
+  <body class="js_body">
     <header class="l_header">
       <h1 class="l_header_ttl">
         <a href="#" class="l_header_ttl_link">Hiwatashi Hitomi</a>
       </h1>
+      <nav class="l_header_nav">
+        <ul class="l_header_nav_list">
+            <li class="l_header_nav_item">
+                <a href="#" class="l_header_nav_link"></a>
+            </li>
+            <li class="l_header_nav_item">
+                <a href="#about" class="l_header_nav_link"></a>
+            </li>
+            <li class="l_header_nav_item">
+                <a href="#skill" class="l_header_nav_link"></a>
+            </li>
+            <li class="l_header_nav_item">
+                <a href="#works" class="l_header_nav_link"></a>
+            </li>
+        </ul>
+      </nav>
     </header>
+    .
   </body>
 </html>
