index.html skill_sectionまで style.css コンテンツ幅や上下の余白を設定

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
       </div>
     </div>
     <main class="l_main">
-      <section class="m_section" id="about">
+      <section class="m_section m_section_about l_contents" id="about">
         <div class="m_section_ttl">
           <h2 class="m_section_ttl_main">about</h2>
           <p class="m_section_ttl_sub">わたしについて</p>
@@ -163,6 +163,57 @@
             サポートすることで退院に向けて支援することができることがわかりました。
             Web制作でも制作したサイトを通してクライアントの事業の一部に携わり、満足いく作品を作るためにもスキルアップを欠かさず新しいことにも挑戦していきたいです。
           </p>
+        </div>
+      </section>
+      <section class="m_section m_section_skill l_contents" id="skill">
+        <div class="m_section_ttl">
+          <h2 class="m_section_ttl_main">skill</h2>
+          <p class="m_section_ttl_sub">技術・ツール</p>
+        </div>
+        <div class="skill_desc">
+            <div class="l_container">
+                <article class="skill_desc_article">
+                    <div class="skill_desc_img_wrapper">
+                        <img src="" alt="" width="" height="" class="skill_desc_img">
+                    </div>
+                    <p class="skill_desc_title">HTML&CSS</p>
+                    <p class="skill_desc_txt">あらゆる画面幅できれいに表示される
+                        レスポンシブ対応やBEM記法を用いた
+                        保守・運用・管理しやすいコードを心掛けます</p>
+                </article>
+                <article class="skill_desc_article">
+                    <div class="skill_desc_img_wrapper">
+                        <img src="" alt="" width="" height="" class="skill_desc_img">
+                    </div>
+                    <p class="skill_desc_title">JavaScript</p>
+                    <p class="skill_desc_txt">GSAPやSwiperを使ったアニメーションや
+                        vanilla JSを使った簡単なアニメーション
+                        （ハンバーガーメニューなど）の実装ができます</p>
+                </article>
+                <article class="skill_desc_article">
+                    <div class="skill_desc_img_wrapper">
+                        <img src="" alt="" width="" height="" class="skill_desc_img">
+                    </div>
+                    <p class="skill_desc_title">WordPress</p>
+                    <p class="skill_desc_txt">静的サイトをワードプレス化し
+                        お客様ご自身で管理、運用できるようにします</p>
+                </article>
+                <article class="skill_desc_article">
+                    <div class="skill_desc_img_wrapper">
+                        <img src="" alt="" width="" height="" class="skill_desc_img">
+                    </div>
+                    <p class="skill_desc_title">github</p>
+                    <p class="skill_desc_txt">コードの保存・編集・共同制作などに活用しています</p>
+                </article>
+                <article class="skill_desc_article">
+                    <div class="skill_desc_img_wrapper">
+                        <img src="" alt="" width="" height="" class="skill_desc_img">
+                    </div>
+                    <p class="skill_desc_title">figma</p>
+                    <p class="skill_desc_txt">１からのデザイン作成ができます
+                        コーディング・アクセサビリティーを考慮したデザインができます。</p>
+                </article>
+            </div>
         </div>
       </section>
     </main>
