index.html work_sectionまで

--- a/src/index.html
+++ b/src/index.html
@@ -171,49 +171,105 @@
           <p class="m_section_ttl_sub">技術・ツール</p>
         </div>
         <div class="skill_desc">
-            <div class="l_container">
-                <article class="skill_desc_article">
-                    <div class="skill_desc_img_wrapper">
-                        <img src="" alt="" width="" height="" class="skill_desc_img">
-                    </div>
-                    <p class="skill_desc_title">HTML&CSS</p>
-                    <p class="skill_desc_txt">あらゆる画面幅できれいに表示される
-                        レスポンシブ対応やBEM記法を用いた
-                        保守・運用・管理しやすいコードを心掛けます</p>
-                </article>
-                <article class="skill_desc_article">
-                    <div class="skill_desc_img_wrapper">
-                        <img src="" alt="" width="" height="" class="skill_desc_img">
-                    </div>
-                    <p class="skill_desc_title">JavaScript</p>
-                    <p class="skill_desc_txt">GSAPやSwiperを使ったアニメーションや
-                        vanilla JSを使った簡単なアニメーション
-                        （ハンバーガーメニューなど）の実装ができます</p>
-                </article>
-                <article class="skill_desc_article">
-                    <div class="skill_desc_img_wrapper">
-                        <img src="" alt="" width="" height="" class="skill_desc_img">
-                    </div>
-                    <p class="skill_desc_title">WordPress</p>
-                    <p class="skill_desc_txt">静的サイトをワードプレス化し
-                        お客様ご自身で管理、運用できるようにします</p>
-                </article>
-                <article class="skill_desc_article">
-                    <div class="skill_desc_img_wrapper">
-                        <img src="" alt="" width="" height="" class="skill_desc_img">
-                    </div>
-                    <p class="skill_desc_title">github</p>
-                    <p class="skill_desc_txt">コードの保存・編集・共同制作などに活用しています</p>
-                </article>
-                <article class="skill_desc_article">
-                    <div class="skill_desc_img_wrapper">
-                        <img src="" alt="" width="" height="" class="skill_desc_img">
-                    </div>
-                    <p class="skill_desc_title">figma</p>
-                    <p class="skill_desc_txt">１からのデザイン作成ができます
-                        コーディング・アクセサビリティーを考慮したデザインができます。</p>
-                </article>
-            </div>
+          <div class="l_container">
+            <article class="skill_desc_article">
+              <div class="skill_desc_img_wrapper">
+                <img src="" alt="" width="" height="" class="skill_desc_img" />
+              </div>
+              <p class="skill_desc_title">HTML&CSS</p>
+              <p class="skill_desc_txt">
+                あらゆる画面幅できれいに表示される
+                レスポンシブ対応やBEM記法を用いた
+                保守・運用・管理しやすいコードを心掛けます
+              </p>
+            </article>
+            <article class="skill_desc_article">
+              <div class="skill_desc_img_wrapper">
+                <img src="" alt="" width="" height="" class="skill_desc_img" />
+              </div>
+              <p class="skill_desc_title">JavaScript</p>
+              <p class="skill_desc_txt">
+                GSAPやSwiperを使ったアニメーションや vanilla
+                JSを使った簡単なアニメーション
+                （ハンバーガーメニューなど）の実装ができます
+              </p>
+            </article>
+            <article class="skill_desc_article">
+              <div class="skill_desc_img_wrapper">
+                <img src="" alt="" width="" height="" class="skill_desc_img" />
+              </div>
+              <p class="skill_desc_title">WordPress</p>
+              <p class="skill_desc_txt">
+                静的サイトをワードプレス化し
+                お客様ご自身で管理、運用できるようにします
+              </p>
+            </article>
+            <article class="skill_desc_article">
+              <div class="skill_desc_img_wrapper">
+                <img src="" alt="" width="" height="" class="skill_desc_img" />
+              </div>
+              <p class="skill_desc_title">github</p>
+              <p class="skill_desc_txt">
+                コードの保存・編集・共同制作などに活用しています
+              </p>
+            </article>
+            <article class="skill_desc_article">
+              <div class="skill_desc_img_wrapper">
+                <img src="" alt="" width="" height="" class="skill_desc_img" />
+              </div>
+              <p class="skill_desc_title">figma</p>
+              <p class="skill_desc_txt">
+                １からのデザイン作成ができます
+                コーディング・アクセサビリティーを考慮したデザインができます。
+              </p>
+            </article>
+          </div>
+        </div>
+      </section>
+      <section class="m_section m_section_works l_contents" id="works">
+        <div class="m_section_ttl">
+          <h2 class="m_section_ttl_main">work</h2>
+          <p class="m_section_ttl_sub">制作物</p>
+        </div>
+        <div class="l_container">
+          <ul class="works_cards">
+            <li class="works_card">
+              <div class="works_card_img_wrapper">
+                <img src="" alt="" width="" height="" class="works_card_img" />
+              </div>
+              <p class="works_card_heading">ポートフォリオサイト</p>
+              <p class="works_card_priod">1か月</p>
+              <p class="works_card_pic">デザイン、コーディング</p>
+              <p class="works_card_skill">
+                Figma、github、HTML&CSS、JavaScript
+              </p>
+              <p class="works_card_Ingenuity"></p>
+            </li>
+            <li class="works_card">
+              <div class="works_card_img_wrapper">
+                <img src="" alt="" width="" height="" class="works_card_img" />
+              </div>
+              <p class="works_card_heading">コーポレートサイト</p>
+              <p class="works_card_priod">1か月</p>
+              <p class="works_card_pic">コーディング</p>
+              <p class="works_card_skill">
+                github、WordPress、HTML&CSS、JavaScript
+              </p>
+              <p class="works_card_Ingenuity"></p>
+            </li>
+            <li class="works_card">
+              <div class="works_card_img_wrapper">
+                <img src="" alt="" width="" height="" class="works_card_img" />
+              </div>
+              <p class="works_card_heading">サイト</p>
+              <p class="works_card_priod">1か月</p>
+              <p class="works_card_pic">コーディング</p>
+              <p class="works_card_skill">
+                Python、github、HTML&CSS、JavaScript
+              </p>
+              <p class="works_card_Ingenuity"></p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
