画像を追加

--- a/src/index.html
+++ b/src/index.html
@@ -62,16 +62,16 @@
       <nav class="l_header_nav">
         <ul class="l_header_nav_list">
           <li class="l_header_nav_item">
-            <a href="#" class="l_header_nav_link"></a>
+            <a href="#" class="l_header_nav_link">top</a>
           </li>
           <li class="l_header_nav_item">
-            <a href="#about" class="l_header_nav_link"></a>
+            <a href="#about" class="l_header_nav_link">about</a>
           </li>
           <li class="l_header_nav_item">
-            <a href="#skill" class="l_header_nav_link"></a>
+            <a href="#skill" class="l_header_nav_link">skill</a>
           </li>
           <li class="l_header_nav_item">
-            <a href="#works" class="l_header_nav_link"></a>
+            <a href="#works" class="l_header_nav_link">works</a>
           </li>
         </ul>
       </nav>
@@ -110,9 +110,9 @@
           <h2 class="m_section_ttl_main">about</h2>
           <p class="m_section_ttl_sub">わたしについて</p>
         </div>
-        <div class="about_profile">
+        <div class="about_profile l_container-sm">
           <div class="about_profile_img_wrapper">
-            <img src="" alt="私の写真" class="about_section_img" />
+            <img src="img/7439.jpg" alt="私の写真" class="about_section_img" />
           </div>
           <div class="about_profile_introduction">
             <h3 class="m_about_profile_title">自己紹介</h3>
@@ -174,7 +174,7 @@
           <div class="l_container">
             <article class="skill_desc_article">
               <div class="skill_desc_img_wrapper">
-                <img src="" alt="" width="" height="" class="skill_desc_img" />
+                <img src="img/icons8-html-64.png" alt="HTML&CSSのアイコン" width="" height="" class="skill_desc_img" />
               </div>
               <p class="skill_desc_title">HTML&CSS</p>
               <p class="skill_desc_txt">
@@ -185,7 +185,7 @@
             </article>
             <article class="skill_desc_article">
               <div class="skill_desc_img_wrapper">
-                <img src="" alt="" width="" height="" class="skill_desc_img" />
+                <img src="img/icons8-javascript-50.png" alt="JavaScriptのアイコン" width="" height="" class="skill_desc_img" />
               </div>
               <p class="skill_desc_title">JavaScript</p>
               <p class="skill_desc_txt">
@@ -196,7 +196,7 @@
             </article>
             <article class="skill_desc_article">
               <div class="skill_desc_img_wrapper">
-                <img src="" alt="" width="" height="" class="skill_desc_img" />
+                <img src="img/WordPress-logotype-wmark.png" alt="WordPressのアイコン" width="" height="" class="skill_desc_img" />
               </div>
               <p class="skill_desc_title">WordPress</p>
               <p class="skill_desc_txt">
@@ -206,7 +206,13 @@
             </article>
             <article class="skill_desc_article">
               <div class="skill_desc_img_wrapper">
-                <img src="" alt="" width="" height="" class="skill_desc_img" />
+                <img
+                  src="img/icons8-github-90.svg"
+                  alt="githubのアイコン"
+                  width="90"
+                  height="90"
+                  class="skill_desc_img"
+                />
               </div>
               <p class="skill_desc_title">github</p>
               <p class="skill_desc_txt">
@@ -215,7 +221,13 @@
             </article>
             <article class="skill_desc_article">
               <div class="skill_desc_img_wrapper">
-                <img src="" alt="" width="" height="" class="skill_desc_img" />
+                <img
+                  src="img/icons8-figma-96.svg"
+                  alt="figmaのアイコン"
+                  width="96"
+                  height="96"
+                  class="skill_desc_img"
+                />
               </div>
               <p class="skill_desc_title">figma</p>
               <p class="skill_desc_txt">
@@ -272,6 +284,26 @@
           </ul>
         </div>
       </section>
+      <footer class="l_footer">
+        <nav class="l_footer_nav">
+          <ul class="l_footer_nav_list">
+            <li class="l_footer_nav_item">
+              <a href="#" class="l_footer_nav_link">top</a>
+            </li>
+            <li class="l_footer_nav_item">
+              <a href="#about" class="l_footer_nav_link">about</a>
+            </li>
+            <li class="l_footer_nav_item">
+              <a href="#skill" class="l_footer_nav_link">skill</a>
+            </li>
+            <li class="l_footer_nav_item">
+              <a href="#work" class="l_footer_nav_link">works</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="https://icons8.jp/" class="icon_link">icon by icons8</a>
+        <small class="l_footer_copyright">&copy;2024 Hitomi Hiwatashi</small>
+      </footer>
     </main>
   </body>
 </html>
