--- a/src/index.html
+++ b/src/index.html
@@ -103,11 +103,11 @@
             <h3 class="m_about_profile_title">自己紹介</h3>
             <table class="about_profile_table">
               <tr class="about_profile_tr">
-                <th class="about_profile_th">名前:</th>
+                <th class="about_profile_th">名 前:</th>
                 <td class="about_profile_td">樋渡 ひとみ</td>
               </tr>
               <tr class="about_profile_tr">
-                <th class="about_profile_th">出身:</th>
+                <th class="about_profile_th">出 身:</th>
                 <td class="about_profile_td">鹿児島県(在住)</td>
               </tr>
               <tr class="about_profile_tr">
@@ -115,7 +115,7 @@
                 <td class="about_profile_td">1996/01/31</td>
               </tr>
               <tr class="about_profile_tr">
-                <th class="about_profile_th">経歴:</th>
+                <th class="about_profile_th">経 歴:</th>
                 <td class="about_profile_td">
                   高校卒業後病院で<br />
                   看護補助者として<br />
@@ -251,9 +251,9 @@
           </h2>
           <p class="m_section_ttl_sub">制作物</p>
         </hgroup>
-        <div class="l_container js_swiper">
-          <ul class="works_cards swiper-wrapper">
-            <li class="works_card swiper-slide">
+        <div class="l_container">
+          <ul class="works_cards">
+            <li class="works_card">
               <div class="works_card_img_wrapper">
                 <img
                   src="img/card1.png"
@@ -275,7 +275,7 @@
                 </p>
               </div>
             </li>
-            <li class="works_card swiper-slide">
+            <li class="works_card">
               <div class="works_card_img_wrapper">
                 <img
                   src="img/card1.png"
@@ -295,7 +295,7 @@
                 <p class="works_card_Ingenuity"></p>
               </div>
             </li>
-            <li class="works_card swiper-slide">
+            <li class="works_card">
               <div class="works_card_img_wrapper">
                 <img
                   src="img/card1.png"
@@ -316,11 +316,6 @@
               </div>
             </li>
           </ul>
-          <!-- <div class="swiper-controller"> -->
-            <div class="works_dots swiper-pagination"></div>
-            <div class="works_nav works_nav__prev swiper-button-prev"></div>
-            <div class="works_nav works_nav__next swiper-button-next"></div>
-          <!-- </div> -->
         </div>
       </section>
       <footer class="l_footer">
