--- a/src/index.html
+++ b/src/index.html
@@ -51,14 +51,14 @@
     <!-- js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/swiper@7/swiper-bundle.min.js"
       defer
-    ></script>
+    ></script> -->
     <script src="js/main.js" defer></script>
   </head>
   <body class="js_body">
-    <header class="l_header">
+    <header class="l_header js_header">
       <h1 class="l_header_ttl">
         <a href="#" class="l_header_ttl_link">Hiwatashi Hitomi</a>
       </h1>
